switch to Java 11 due to UUID serialization error , add comment integration tests, elastic search bug fixes